--- a/index.html
+++ b/index.html
@@ -1456,7 +1456,7 @@ function loadFileAsText(){
 
   var fileReader = new FileReader();
   fileReader.onload = function(fileLoadedEvent){
-      var textFromFileLoaded = fileLoadedEvent.target.result;
+      window.textFromFileLoaded = fileLoadedEvent.target.result;
       document.getElementById("inputTextToSave").value = textFromFileLoaded;
   };
 	
