--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@ function loadFileAsText(){
   var fileReader = new FileReader();
   fileReader.onload = function(fileLoadedEvent){
       window.textFromFileLoaded = fileLoadedEvent.target.result;
-      document.getElementById("inputTextToSave") = textFromFileLoaded;
+      //document.getElementById("inputTextToSave").value = textFromFileLoaded;
   };
 	
   fileReader.readAsText(fileToLoad, "UTF-8");
