--- a/index.html
+++ b/index.html
@@ -1428,14 +1428,15 @@
 <input type="file" id="fileToLoad" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;"></center>
 <input type="button" value="initiate file read" onclick="loadFileAsText()">
 <!--<textarea id="content-target"></textarea>-->
-<input type="button" value="load" onclick="recoverInputs(this.form,textdownload,true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,cookiefromfile,true);">
 <input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded.replace(/%2C/g,","));">
 </form>
 </div>
 	
 <script>
-var cookiefromfile = document.getElementById('content-target')
+var cookiefromfile = textFromFileLoaded.replace(/%2C,",")
+//var cookiefromfile = document.getElementById('content-target')
 //var stringtyped = ",e599,custom,4,,,,1,,1,1,,,,,,,,1,,1,,1,,,,,,,,,,,,1,,1,,,,,,,,1,,,1,,,1,,,,,,,,,,,,,,,,,,,,,,1,,,,1,,,1,,,,,,1,dff,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,1,,1,1,1,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,1,1,1,,,,,,,,,,,,,,,1,,1,,,,sdfsf,,,,,,,,,,,,,,,,fdsfdsf,,,,,,sfds,,,,,,,1,,,1,,,,,,,,,1,,,,1,,,,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,sddsfdfdffff,,,,";	
 	
 /*document.getElementById('input-file')
