--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
 </div>
 	
 <script>
-var cookiefromfile = textFromFileLoaded.replace(/%2C,",")
+var cookiefromfile = textFromFileLoaded.replace(/%2C/g,",")
 //var cookiefromfile = document.getElementById('content-target')
 //var stringtyped = ",e599,custom,4,,,,1,,1,1,,,,,,,,1,,1,,1,,,,,,,,,,,,1,,1,,,,,,,,1,,,1,,,1,,,,,,,,,,,,,,,,,,,,,,1,,,,1,,,1,,,,,,1,dff,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,1,,1,1,1,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,1,1,1,,,,,,,,,,,,,,,1,,1,,,,sdfsf,,,,,,,,,,,,,,,,fdsfdsf,,,,,,sfds,,,,,,,1,,,1,,,,,,,,,1,,,,1,,,,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,sddsfdfdffff,,,,";	
 	
