--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@
 <input type="file" id="fileToLoad" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;"></center>
 <input type="button" value="initiate file read" onclick="loadFileAsText()">
 <!--<textarea id="content-target"></textarea>-->
-<input type="button" value="load" onclick="recoverInputs(this.form,cookiefromfile,true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,textFromFileLoaded,true);">
 <input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
 </form>
