--- a/index.html
+++ b/index.html
@@ -1429,8 +1429,8 @@
 <input type="button" value="initiate file read" onclick="loadFileAsText()">
 <!--<textarea id="content-target"></textarea>-->
 <input type="button" value="load" onclick="recoverInputs(this.form,textFromFileLoaded,true);">
-<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
-<input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
+//<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
+//<input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
 </form>
 </div>
 	
