--- a/index.html
+++ b/index.html
@@ -1430,14 +1430,14 @@
 <input type="button" value="load" onclick="recoverInputs(this.form,textFromFileLoaded,true);">
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">-->
-<input type="button" value="fullrecovertest" onclick="FullRecoverTask()">
+<input type="button" value="fullrecovertest" onclick="FullRecoverTask(textFromFileLoaded)">
 </form>
 </div>
 	
 <script>
-function FullRecoverTask(){
-loadFileAsText()
-recoverInputs(this.form,textFromFileLoaded,true)
+function FullRecoverTask(textplease){
+loadFileAsText();
+recoverInputs(this.form,textplease,true);
 }
 	
 function loadFileAsText(){
