--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ function loadFileAsText(){
 
   var fileReader = new FileReader();
   fileReader.onload = function(fileLoadedEvent){
-      textFromFileLoaded = fileLoadedEvent.target.result.replace(/%2C/g,",");
+      window.textFromFileLoaded = fileLoadedEvent.target.result.replace(/%2C/g,",");
       //document.getElementById("inputTextToSave").value = textFromFileLoaded;
   };
 	
