--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
 	
 <center>
 <input type="file" id="fileToLoad" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;" onchange="loadFileAsText()";></center>
-<input type="button" value="initiate file read" onclick="loadFileAsText()">
+<!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
 <input type="button" value="load" onclick="recoverInputs(this.form,textFromFileLoaded,true);">
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
