--- a/index.html
+++ b/index.html
@@ -1418,12 +1418,12 @@
 <input type="button" class="button-cookie" style="width:32.3%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
 <input type="button" class="button-cookie" style="width:32.3%" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
 </center>
-<center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
+<center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
 	
 <center>
-<input type="file" id="fileToLoad" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;" onchange="loadFileAsText()";></center>
+<input type="file" id="fileToLoad" class="btn-file-upload" value="Load Checklist From File" style="width:97.5%; margin-top:3px;" onchange="loadFileAsText()";></center>
 <!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
-<center><input type="button" value="load" class="btn-file-upload" style="width:97.5%; margin-top:3px;" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
+<center><input type="button" value="Load Values" class="btn-file-upload" style="width:97.5%; margin-top:3px;" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
 <input type="button" value="fullrecovertest" onclick="FullRecoverTask()">-->
