--- a/index.html
+++ b/index.html
@@ -1719,6 +1719,7 @@ button,
     font-size: 12px;
     line-height: 2;
     cursor: pointer;
+    border: 2px solid black;
  }
 	
 .button-cookie-load {
@@ -1735,6 +1736,7 @@ button,
   margin: 0;
   cursor: pointer;
   margin-top: 3px;
+  border: 2px solid black;
 }
 	
 .button-cookie {
