--- a/index.html
+++ b/index.html
@@ -1716,6 +1716,7 @@ button,
     color: black;
     border-radius: 2px;
     text-align: center;
+    white-space: nowrap;
     font-size: 12px;
     line-height: 2;
     cursor: pointer;
