--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,7 @@ button,
 }
 	
 .btn-file-upload-load{
-     width: 100%;
+     width: 97.5%;
      position:relative;
  }
 
@@ -1721,6 +1721,7 @@ button,
     line-height: 2;
     cursor: pointer;
     border: 1px solid black;
+    margin-top: 3px;
  }
 	
 .button-cookie-load {
