--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
 	
 <center>
-<input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%" onchange="loadFileAsText()";></center>
+<input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:60%; margin-top: 3px;" onchange="loadFileAsText()";></center>
 <!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
@@ -1701,7 +1701,7 @@ button,
 }
 	
 .btn-file-upload-load{
-     width: 97.5%;
+     width: 100%;
      position:relative;
  }
 
@@ -1721,7 +1721,7 @@ button,
     line-height: 2;
     cursor: pointer;
     border: 1px solid black;
-    margin-top: 3px;
+   
  }
 	
 .button-cookie-load {
