--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,7 @@ button,
 	
 .btn-file-upload-load{
      width: 100%;
-     position:relative;
+     position:absolute;
  }
 
 .btn-file-upload-load:after{
