--- a/index.html
+++ b/index.html
@@ -1701,12 +1701,12 @@ button,
 	
 .btn-file-upload-load{
      width: 100%;
-     position:absolute;
+     position:relative;
  }
 
 .btn-file-upload-load:after{
     content:  attr(value);
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;    
