--- a/index.html
+++ b/index.html
@@ -1706,7 +1706,7 @@ button,
 
 .btn-file-upload-load:after{
     content:  attr(value);
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;    
