--- a/index.html
+++ b/index.html
@@ -1706,7 +1706,9 @@ button,
 .btn-file-upload-load:after{
     content:  attr(value);
     position: absolute;
-      
+    top: 0;
+    left: 0;
+    bottom: 0; 
     width: 100%;
     background: rgba(255,100,100,1);
     color: black;
@@ -1714,9 +1716,7 @@ button,
     text-align: center;
     font-size: 12px;
     line-height: 2;
-    cursor: pointer;
-border: 1px solid black;
-    
+    cursor: pointer; 
    
  }
 	
@@ -1732,7 +1732,6 @@ border: 1px solid black;
   margin: 0;
   cursor: pointer;
   margin-top: 3px;
-  border: 1px solid black;
   border-radius: 2px;
   
 }
