--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
 	
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
 	<hr>
-<center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%; margin-top: 3px; margin-left:0%;" onchange="loadFileAsText()";></center>
+<center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%;" onchange="loadFileAsText()";></center>
 <!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
