--- a/index.html
+++ b/index.html
@@ -1712,8 +1712,8 @@ button,
     left: 0;
     bottom: 0; 
     width: 100%;
-    background: rgba(252,181,72,1);
-    color: black;
+    background: rgba(21,84,131,1);
+    color: white;
     border-radius: 2px;
     text-align: center;
     font-size: 12px;
@@ -1723,8 +1723,8 @@ button,
  }
 	
 .button-cookie-load {
-  background:rgba(252,181,72,1);
-  color: black;
+  background:rgba(21,84,131,1);
+  color: white;
   /*font-family: Calibri, Candara, Segoe;*/
   font-size: 12px;
   line-height: 1.2;
