--- a/index.html
+++ b/index.html
@@ -1413,6 +1413,7 @@
 </center>
 -->
 
+<div id="noprint">
 <center>
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
 <input type="button" class="button-cookie" style="width:32.3%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
@@ -1420,13 +1421,14 @@
 </center>
 	
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
-	<hr>
+
 <center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%;" onchange="loadFileAsText()";></center>
 <!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
 <input type="button" value="fullrecovertest" onclick="FullRecoverTask()">-->
+</div>
 </form>
 </div>
 	
@@ -1773,7 +1775,13 @@ input[type=checkbox]:checked
     background-color: /*rgba(21,84,131,1)*/black;
     background: /*rgba(21,84,131,1)*/black /*url("data:image/gif;base64,R0lGODlhCwAKAIABAP////3cnSH5BAEKAAEALAAAAAALAAoAAAIUjH+AC73WHIsw0UCjglraO20PNhYAOw==") 2.3px 2.3px no-repeat;*/
 }
-		
+
+@media print {
+   .noprint {
+      visibility: hidden;
+   }
+}
+	
 </style>
 
 </body>
