--- a/index.html
+++ b/index.html
@@ -1718,6 +1718,7 @@ button,
     color: white;
     border-radius: 2px;
     text-align: center;
+    margin-top: 3px;
     font-size: 12px;
     line-height: 2;
     cursor: pointer; 
