--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
 	
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
 
-<center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%;" onchange="loadFileAsText()";></center>
+<center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Load Checklist From File" style="width:97.5%; margin-top: 3px;" onchange="loadFileAsText()";></center>
 <!--<input type="button" value="initiate file read" onclick="loadFileAsText()">-->
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
@@ -1718,7 +1718,7 @@ button,
     color: white;
     border-radius: 2px;
     text-align: center;
-    margin-top: 3px;
+    
     font-size: 12px;
     line-height: 2;
     cursor: pointer; 
