--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
 </center>
 -->
 
-<div class='noprint'>
+<div class="noprint">
 <center>
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
 <input type="button" class="button-cookie" style="width:32.3%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
