--- a/index.html
+++ b/index.html
@@ -1781,7 +1781,7 @@ input[type=checkbox]:checked
 {    
     .no-print, .no-print *
     {
-        display: none !important;
+        visibility: hidden !important;
     }
 }
 	
