--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
 </center>
 -->
 
-<div class="noprint">
+<h1 class="noprint">
 <center>
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
 <input type="button" class="button-cookie" style="width:32.3%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
@@ -1428,7 +1428,7 @@
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">
 <input type="button" value="fullrecovertest" onclick="FullRecoverTask()">-->
-</div>
+</h1>
 </form>
 </div>
 	
