--- a/index.html
+++ b/index.html
@@ -1464,10 +1464,10 @@ function download(filename, text) {
   document.body.removeChild(element);
 }
 	
-function downloadimages(i++) {
+function downloadimages() {
 i=0;
 var a = document.createElement('a');
-a.href = "img_urla.png";
+a.href = "img_url.png";
 a.download = "Picture" + i + ".png";
 document.body.appendChild(a);
 a.click();
