--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@ function download(filename, text) {
 function downloadimages() {
 i=0;
 var a = document.createElement('a');
-a.href = "img_url.png";
+a.href = $('#img_url')[0].src;
 a.download = "Picture" + i + ".png";
 document.body.appendChild(a);
 a.click();
