--- a/index.html
+++ b/index.html
@@ -1465,18 +1465,24 @@ function download(filename, text) {
 }
 	
 function downloadimages() {
-i=0;
+while(i < 9) {
+var picturenumber = i+1;
 var a = document.createElement('a');
-a.href = $('#img_url')[0].src;
-a.download = "Picture" + i + ".png";
+if(i==0) {a.href=$('#img_url')[0].src;}
+if(i==1) {a.href=$('#img_urla')[0].src;}
+if(i==2) {a.href=$('#img_urlb')[0].src;}
+if(i==3) {a.href=$('#img_urlc')[0].src;}
+if(i==4) {a.href=$('#img_urld')[0].src;}
+if(i==5) {a.href=$('#img_urle')[0].src;}
+if(i==6) {a.href=$('#img_urlf')[0].src;}
+if(i==7) {a.href=$('#img_urlg')[0].src;}
+if(i==8) {a.href=$('#img_urlh')[0].src;}
+a.download = "Picture" + picturenumber + ".png";
 document.body.appendChild(a);
 a.click();
 document.body.removeChild(a);
 i++;
-if(i=1) {
-a.href=$('#img_urla')[0].src;
 }
-	
 }
 	
 function img_pathUrl(input){
