--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
 <!--<input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">-->
-<input type="button" value="download image" onclick="downloadimages()">
+<input type="button" value="Download Images" onclick="downloadimages()" class="btn-file-upload-load" style="width:97.5%; margin-top: 3px;">
 </div>
 </form>
 </div>
