--- a/index.html
+++ b/index.html
@@ -1464,7 +1464,7 @@ function download(filename, text) {
   document.body.removeChild(element);
 }
 	
-function downloadimages() {
+function downloadimages(i) {
 while(i < 9) {
 var picturenumber = i+1;
 var a = document.createElement('a');
