--- a/index.html
+++ b/index.html
@@ -1450,8 +1450,7 @@ var inputs = document.getElementById("checklistform").elements;
 
 function download(filename, text) {
   var filename= inputs["serialnumberdryer"].value;
-	//var text=retrieveCookie('formdata');
-	var text=document.cookie;
+  var text=document.cookie;
   var textbefore=document.cookie;
   text= textbefore.split("=").pop();
   var element = document.createElement('a');
@@ -1465,25 +1464,27 @@ function download(filename, text) {
 }
 	
 function downloadimages(i=0) {
-while(i < 9) {
-var picturenumber = i+1;
-var a = document.createElement('a');
-if(i==0) {a.href=$('#img_url')[0].src;}
-if(i==1) {a.href=$('#img_urla')[0].src;}
-if(i==2) {a.href=$('#img_urlb')[0].src;}
-if(i==3) {a.href=$('#img_urlc')[0].src;}
-if(i==4) {a.href=$('#img_urld')[0].src;}
-if(i==5) {a.href=$('#img_urle')[0].src;}
-if(i==6) {a.href=$('#img_urlf')[0].src;}
-if(i==7) {a.href=$('#img_urlg')[0].src;}
-if(i==8) {a.href=$('#img_urlh')[0].src;}
-a.download = "Picture" + picturenumber + ".png";
-document.body.appendChild(a);
-a.click();
-document.body.removeChild(a);
-i++;
-}
-}
+	
+  while(i < 9) {
+    var picturenumber = i+1;
+    var a = document.createElement('a');
+    if(i==0) {a.href=$('#img_url')[0].src;  a.download = "Picture 1.png";}
+    if(i==1) {a.href=$('#img_urla')[0].src; a.download = "Picture 2.png";}
+    if(i==2) {a.href=$('#img_urlb')[0].src; a.download = "Picture 3.png";}
+    if(i==3) {a.href=$('#img_urlc')[0].src; a.download = "Picture 4.png";}
+    if(i==4) {a.href=$('#img_urld')[0].src; a.download = "Defect 1.png";}
+    if(i==5) {a.href=$('#img_urle')[0].src; a.download = "Defect 2.png";}
+    if(i==6) {a.href=$('#img_urlf')[0].src; a.download = "Defect 3.png";}
+    if(i==7) {a.href=$('#img_urlg')[0].src; a.download = "Defect 4.png";}
+    if(i==8) {a.href=$('#img_urlh')[0].src; a.download = "Defect 5.png";}
+    //a.download = "Picture" + picturenumber + ".png";
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    i++;
+    }
+	
+  }
 	
 function img_pathUrl(input){
         $('#img_url')[0].src = (window.URL ? URL : webkitURL).createObjectURL(input.files[0]);
