--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@
 <input type="button" value="Download Images" onclick="downloadimages()" class="button-cookie-load" style="width:97.5%">
 
 <script>
-var formchange = document.getElementById("checklistform");
+var formchange = document.getElementById('checklistform');
 	
 formchange.addEventListener("input", function () {
 	console.log("form has changed");
@@ -1429,7 +1429,7 @@ formchange.addEventListener("input", function () {
 	
 //formchange.addEventListener("input", function () {
 //	console.log("form has changed");
- //   setCookie('formdata',getFormString(this.form,true), 1209600);
+ //  setCookie('formdata',getFormString(this.form,true), 1209600);
 //});
 
 
