--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
 
 <script>
 var formchange = document.getElementById('checklistform');
-	
+console.log(formchange);
 formchange.addEventListener("input", function () {
 	console.log("form has changed");
     setCookie('formdata',getFormString(this.form,true), 1209600);
