--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@
 <input type="button" value="Download Images" onclick="downloadimages()" class="button-cookie-load" style="width:97.5%">
 
 <script>
-var formchange = document.getElementById('checklistform');
+var formchange = document.getElementById("checklistform");
 console.log(formchange);
 formchange.addEventListener("input", function () {
 	console.log("form has changed");
