--- a/index.html
+++ b/index.html
@@ -1411,27 +1411,18 @@
 <input type="button" value="read file to console" onclick="console.log(textFromFileLoaded);">-->
 <input type="button" value="Download Images" onclick="downloadimages()" class="button-cookie-load" style="width:97.5%">
 
-<script>
-var formchange = document.getElementById("checklistform");
-console.log(formchange);
-formchange.addEventListener("input", function () {
-	console.log("form has changed");
-    setCookie('formdata',getFormString(this.form,true), 1209600);
-});
-</script>
-	
 </div>
 </form>
 </div>
 	
 <script>
-//var formchange = document.getElementById("checklistform");
 	
-//formchange.addEventListener("input", function () {
-//	console.log("form has changed");
- //  setCookie('formdata',getFormString(this.form,true), 1209600);
-//});
-
+var formchange = document.getElementById("checklistform").value;
+console.log(formchange);
+formchange.addEventListener("input", function () {
+	console.log("form has changed");
+    setCookie('formdata',getFormString(this.form,true), 1209600);
+});
 
 function loadFileAsText(){
   var fileToLoad = document.getElementById("fileToLoad").files[0];
