--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
 	
 <script>
 	
-var formchange = document.getElementById('checklistform').value;
+var formchange = document.getElementById('checklistform');
 console.log(formchange);
 formchange.addEventListener("input", function () {
 	console.log("form has changed");
