--- a/index.html
+++ b/index.html
@@ -1422,6 +1422,7 @@ console.log(formchange);
 formchange.addEventListener("input", function () {
 	console.log("form has changed");
     setCookie('formdata',getFormString(this.form,true), 1209600);
+	console/log('formdata');
 });
 
 function loadFileAsText(){
