--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <!-- text document -->
 <html>
-<body>
+<body onload="recoverInputs(document.forms["checklistform"],retrieveCookie('formdata'),true);" onunload="setCookie('formdata',getFormString(document.forms["checklistform"],true));">
 
 <!--<center><img src="C:\Users\joelc\Pictures\header.png" alt="header" style="width:94%;"></center>-->
 <center><img src="https://user-images.githubusercontent.com/85181898/120836394-2336ed80-c52b-11eb-9bac-33c59cea5fb8.png" alt="header" style="width:94%;"></center>
@@ -1417,8 +1417,6 @@
 	
 <script>
 //window.setInterval('setCookie(\'formdata\',getFormString(document.forms["checklistform"],true));',6000);
-<form onload="recoverInputs(document.forms["checklistform"],retrieveCookie('formdata'),true);">
-<form onunload="setCookie('formdata',getFormString(document.forms["checklistform"],true));">
 //var formchange = document.getElementById('checklistform');
 //formchange.addEventListener("input", function () {
 //	console.log("form has changed");
