--- a/index.html
+++ b/index.html
@@ -1397,13 +1397,13 @@
 &nbsp<input type="file" id="img_fileh" class="btn-file-upload" value="Defect 5" style="width: 19%" onChange="img_pathUrlh(this);"></center>
 
 <div class="noPrint">
-<center>
+<!--<center> these buttons for manual save and load from cookies. now in onload & onunload in body
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
 <input type="button" class="button-cookie" style="width:32.3%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
 <input type="button" class="button-cookie" style="width:32.3%" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
-</center>
-	
-<center><input type="button" class="button-cookie" style="width:97.5%" value="Submit Quality Checklist" onclick="download();"></center>
+</center>-->
+<center><input type="reset"  class="button-cookie" style="width:49%" name="g">
+<input type="button" class="button-cookie" style="width:49%" value="Submit Quality Checklist" onclick="download();"></center>
 
 <center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Select Quality Form From File" style="width:97.5%; margin-top: 3px;" onchange="loadFileAsText()";></center>
 <center><input type="button" value="Load Values" class="button-cookie-load" style="width:97.5%" onclick="recoverInputs(this.form,textFromFileLoaded,true);"><center>
