--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
 	
 <center>
 <input type="reset"  class="button-cookie" style="width:48.6%" name="g">
-<input type="button" class="button-cookie" style="width:48.6%" value="Submit Quality Checklist" onclick="download();">
+<input type="button" class="button-cookie" style="width:48.6%" value="Submit Quality Checklist" onclick="setCookie('formdata',getFormString(this.form,true), 1209600); download();">
 </center>
 
 <center><input type="file" id="fileToLoad" class="btn-file-upload-load" value="Select Quality Form From File" style="width:97.5%; margin-top: 3px;" onchange="loadFileAsText()";></center>
