--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
 <label for="customervfd"> Customer VFD</label></div>
 
 <div style="float:left"> Discharge Auger Length</div> 
+<div style="margin-left: 39%">
 <input type ="text" id="dischargeaugerlength" name="dischargeaugerlength" size="5%" placeholder="feet">
-<div style="margin-left: 39%"> Drag Conveyor
+Drag Conveyor
 <input type="checkbox" id="yesdbc1" name="yesdbc1" value="yesdbc1">
 <label for="yesdbc1"> Yes</label>&nbsp&nbsp
 <input type="checkbox" id="nodbc1" name="nodbc1" value="nodbc1">
