--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Drag Conveyor
 <label for="nodbc1"> No</label></div>
 
 <div style="float:left"> QT Matches Decals and Metal Plates</div>
-<div style="margin-left: 39%">&nbsp
+<div style="margin-left: 39%">
 <input type="checkbox" id="yesdbc2" name="yesdbc2" value="yesdbc2">
 <label for="yesdbc2"> Yes</label>&nbsp&nbsp
 <input type="checkbox" id="nodbc2" name="nodbc2" value="nodbc2">
