--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <div style="float:left"> Discharge Auger Length</div> 
 <div style="margin-left: 39%">
-<input type ="text" id="dischargeaugerlength" name="dischargeaugerlength" size="5%" placeholder="feet">
+<input type ="text" id="dischargeaugerlength" name="dischargeaugerlength" size="5%" placeholder="Feet">
 Drag Conveyor
 <input type="checkbox" id="yesdbc1" name="yesdbc1" value="yesdbc1">
 <label for="yesdbc1"> Yes</label>&nbsp&nbsp
